--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -4,12 +4,11 @@ After=network.target
 
 [Service]
 User=ubuntu
-WorkingDirectory=~/AirBnB_clone_v3/
-ExecStart=gunicorn -b 0.0.0.0:5003 -w 3 web_dynamic.2-hbnb:app
-Restart=always
-RestartSec=3
-ErrorLog=/tmp/airbnb-error.log
-AccessLog=/tmp/airbnb-access.log
+Group=ubuntu
+WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
+ExecStart=/home/ubuntu/.local/bin/gunicorn --bind 0.0.0.0:5003 --workers=3 --error-logfile /tmp/airbnb-error.log --access-logfile /tmp/airbnb-access.log web_dynamic.2-hbnb:app
+ExecStop=/bin/pkill gunicorn
+Environment=HBNB_MYSQL_USER=hbnb_dev HBNB_MYSQL_PWD=hbnb_dev_pwd HBNB_MYSQL_HOST=localhost HBNB_MYSQL_DB=hbnb_dev_db HBNB_TYPE_STORAGE=db HBNB_API_HOST=0.0.0.0 HBNB_API_PORT=5003
 
 [Install]
 WantedBy=multi-user.target
